spacing to search results fix

--- a/components/SearchBox/SearchBox.module.css
+++ b/components/SearchBox/SearchBox.module.css
@@ -13,6 +13,10 @@
   position: relative;
 }
 
+.smallContainer {
+  display: flex;
+}
+
 .searchButton {
   border: none;
   width: 60px;
@@ -41,9 +45,18 @@
 }
 
 .dropdown {
+  padding-top: 0.5em;
   position: absolute;
-  background-color: gray;
+  background-color: rgb(46, 46, 46);
   top: 100%;
   width: 100%;
   z-index: 1;
+}
+
+.dropdown a {
+  padding-left: 1em;
+  padding-bottom: 0.5em;
+  display: block;
+  cursor: pointer;
+  overflow: hidden;
 }
